# bayesian-topics

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  project.ipynb  pyproject.toml
configs/: default.yaml
configs/models/: ctm.yaml  hdp.yaml  lda_gibbs.yaml  lda_vi.yaml
docs/: algorithms.md  configuration.md  evaluation.md  getting_started.md
notebooks/: 01_quick_start.ipynb  02_model_comparison.ipynb  03_full_tutorial.ipynb
src/nbtm/: __init__.py  cli.py  config.py
src/nbtm/data/: __init__.py  corpus.py  dataset.py  preprocessing.py  vocabulary.py
src/nbtm/evaluation/: __init__.py  benchmark.py  coherence.py  diversity.py  perplexity.py
src/nbtm/models/: __init__.py  base.py  ctm.py  hdp.py  lda_gibbs.py  lda_vi.py  registry.py
src/nbtm/training/: __init__.py  callbacks.py  metrics.py  trainer.py
src/nbtm/visualization/: __init__.py  comparison.py  convergence.py  document_topics.py  topic_words.py  wordcloud.py
tests/: __init__.py
